--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-__pycache__
-env/
-shell/
+data/WERKVERZEICHNIS.csv
+static/art/
+
 images/*
 images
 
-static/art/
 node_modules
 npm-debug.log
 
@@ -19,3 +18,6 @@ yarn-error.log
 *.sqlite
 
 .~lock*
+__pycache__
+env/
+shell/
