--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,49 @@
--i https://pypi.org/simple
 awesome-slugify==1.6.5
 bitarray==0.8.3
 blessings==1.7
 cchardet==2.1.4
-certifi==2018.10.15
+certifi==2019.3.9
 chardet==3.0.4
-click==7.0
-dataflows==0.0.32
+Click==7.0
+dataflows==0.0.46
 datapackage==1.5.1
 et-xmlfile==1.0.1
-flask-api==1.0
-flask==1.0.2
-idna==2.7
+Flask==1.0.2
+Flask-API==1.1
+gunicorn==19.9.0
+idna==2.8
 ijson==2.3
 inquirer==2.5.1
 isodate==0.6.0
 itsdangerous==1.1.0
 jdcal==1.4
-jinja2==2.10
+Jinja2==2.10
 jsonlines==1.2.0
 jsonpointer==1.14
 jsonschema==2.6.0
 kvfile==0.0.6
 linear-tsv==1.1.0
-markupsafe==1.0
-numpy==1.15.3
+MarkupSafe==1.1.1
+numpy==1.16.2
 openpyxl==2.4.11
-pandas-datapackage-reader==0.11.1
+pandas==0.24.2
+pandas-datapackage-reader==0.12.1
 pybloom-live==2.3.2
-python-dateutil==2.7.5
-pytz==2018.7
+python-dateutil==2.8.0
+pytz==2018.9
 readchar==2.0.1
-regex==2018.11.2
-requests==2.20.0
-rfc3986==1.1.0
-six==1.11.0
-sqlalchemy==1.2.13
+regex==2019.3.12
+requests==2.21.0
+rfc3986==1.2.0
+six==1.12.0
+SQLAlchemy==1.3.1
+tableschema==1.3.3
 tableschema-sql==0.10.4
-tableschema==1.2.5
-tabulate==0.8.2
-tabulator==1.18.0
+tabulate==0.8.3
+tabulator==1.19.0
 unicodecsv==0.14.1
-unidecode==0.4.21
-urllib3==1.24
-werkzeug==0.14.1
-xlrd==1.1.0
+Unidecode==0.4.21
+urllib3==1.24.1
+Werkzeug==0.15.1
+xlrd==1.2.0
+xmljson==0.2.0
